<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#efefef"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">


    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/images"
        android:layout_width="match_parent"
        android:layout_height="87dp"
        android:src="@drawable/taste"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:text="Customer type"
        android:textSize="18sp" />


    <RadioGroup
        android:id="@+id/rgCustomerType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbMLS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid_level_supplier"
            android:paddingRight="20dp"/>

        <RadioButton
            android:id="@+id/rbEC"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:text="@string/everyday_consumer" />


    </RadioGroup>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/surname"
        android:maxLines="1"
        android:singleLine="true" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Storename"
        android:hint="@string/Storename"
        android:maxLines="1"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/province"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:entries="@array/provinces"
        android:prompt="@string/ChooseProvince"
        android:background="#d2d0ce"/>

            <Spinner
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginTop="5dp"
                android:background="#d2d0ce"
                android:prompt="@string/ChooseCity"
                android:entries="@array/Eastern_Cape"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/email_address"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etContactNo"
        android:hint="Phone Number"
        android:inputType="phone"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Password"
        android:hint="Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/conPassword"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true" />
    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/scheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Show Password" />

    <Button
        android:id="@+id/bReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ff0016"
        android:text="Register"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d2d0ce"
        android:text="Cancel"
        android:textColor="#ff0016"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

        </TableLayout>
    </ScrollView>
</LinearLayout>